logs/pyboxer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/box.py'...
***   File "./lib/python3.5/site-packages/box.py", line 22
    print "Please Provide Data!\n"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/box_insertion.py'...
***   File "./lib/python3.5/site-packages/box_insertion.py", line 33
    print "Welcome {}." .format(username)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/box_variable.py'...
***   File "./lib/python3.5/site-packages/box_variable.py", line 12
    print "Box Code creation failed!\n"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/error.py'...
***   File "./lib/python3.5/site-packages/error.py", line 14
    print "ERROR: ",
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/help.py'...
***   File "./lib/python3.5/site-packages/help.py", line 16
    print "Help[2]: %s\n"% help_msg['version']
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyboxer-1.0.0b0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/welcome.py'...
***   File "./lib/python3.5/site-packages/welcome.py", line 21
    print "(C) Aadit Kapoor 2014\n"
                                  ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
